Add video link input
